--- a/index.html
+++ b/index.html
@@ -34,19 +34,16 @@
       href="https://www.youtube.com/watch?v=3nz5HkUJaVU" 
       target=" _blank" 
       class="memory">
-      <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero à Primeira Vaga</h1>
+      <small>Dezembro de 2016</small>
+      <h1>The beggining</h1>
       <div>
         <img 
-        src="./assets/jornada.png" 
-        alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga" 
+        src="./assets/jeremy.jpg"    
+        alt="mapple leaves" 
         />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Drielle e Marco Tulio, um jovem casal sonhador decide dar o primeiro passo rumo ao sonho de imigrar com sua família para o Canadá. Assinaram um contrato com uma escola de francês para iniciar os estudos da língua para, então, tentar o processo provinçal. Era o início de uma longa trajetória de muita dedicação, estudos e resiliência rumo a este projeto. 🍁
       </p>
     </a>
 
@@ -54,34 +51,28 @@
       href="https://www.youtube.com/watch?v=3nz5HkUJaVU" 
       target=" _blank" 
       class="memory">
-      <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero à Primeira Vaga</h1>
+      <small>Junho de 2023</small>
+      <h1>Time...</h1>
       <div>
-        <img src="./assets/jornada.png" alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga" />
+        <img src="./assets/hourglass.jpg" alt="hourglass" />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Com o tempo os desafios foram e têm sido muitos. Mas eles seguem estudando e trabalhando com afinco sem jamais perder a fé que em breve esse projeto será uma realidade em suas vidas.
       </p>
     </a>
 
     <a 
       href="https://www.youtube.com/watch?v=3nz5HkUJaVU" target=" _blank" class="memory">
-      <small>20 de Março de 2023</small>
-      <h1>Jornada do Zero à Primeira Vaga</h1>
+      <small>Somewhere in the future </small>
+      <h1>Future</h1>
       <div>
       <img 
-        src="./assets/jornada.png" 
-        alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga" 
+        src="./assets/passports.jpg" 
+        alt="Canadian passports" 
         />
       </div>
       <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique...
+        Em breve esperamos atualizar esta cápsula com boas novas à respeito de nossa chegada e vida no Canadá. Até lá seguimos lutando. 🍁
       </p>
     </a>
   </nav>
